finish implement middleware
